welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: not found: value paas
while (!estSurBiscuit) {avance();paas=pas+1}
                                 ^