welcome.lessons.welcome.loopfor.LoopFor.scala.code
var pas = 0 ;
while (!estSurBiscuit) {avance();paas=pas+1}
prendBiscuit();
for (i <- 0 to pas ) {avance()}
poseBiscuit()